fixed white space on right on iPod... because of ping us email

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -277,6 +277,11 @@ body {
     }
 }
 
+@media (max-width:320px) {
+    .ping-us_email > p {
+        font-size: 20px;
+    }
+}
 /*traits logo position settings*/
 .placehold {
     margin-top: 30px;
